// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering other languages should sort them by the relevance 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div
      key="en"
    >
      <Stack
        alignItems="stretch"
        scale="xs"
      >
        <LocalizedInput
          hasError={false}
          language="en"
          onChange={[MockFunction]}
          value="en"
        />
      </Stack>
    </div>
    <div
      key="en-GB"
    >
      <Stack
        alignItems="stretch"
        scale="xs"
      >
        <LocalizedInput
          hasError={false}
          isAutofocussed={false}
          language="en-GB"
          onChange={[MockFunction]}
          value="en-GB"
        />
      </Stack>
    </div>
    <div
      key="de"
    >
      <Stack
        alignItems="stretch"
        scale="xs"
      >
        <LocalizedInput
          hasError={false}
          isAutofocussed={false}
          language="de"
          onChange={[MockFunction]}
          value="de"
        />
      </Stack>
    </div>
    <div
      key="fr"
    >
      <Stack
        alignItems="stretch"
        scale="xs"
      >
        <LocalizedInput
          hasError={false}
          isAutofocussed={false}
          language="fr"
          onChange={[MockFunction]}
          value="fr"
        />
      </Stack>
    </div>
    <div
      key="nan-Hant-TW"
    >
      <Stack
        alignItems="stretch"
        scale="xs"
      >
        <LocalizedInput
          hasError={false}
          isAutofocussed={false}
          language="nan-Hant-TW"
          onChange={[MockFunction]}
          value="nan-Hant-TW"
        />
      </Stack>
    </div>
    <div
      key="pt-BR"
    >
      <Stack
        alignItems="stretch"
        scale="xs"
      >
        <LocalizedInput
          hasError={false}
          isAutofocussed={false}
          language="pt-BR"
          onChange={[MockFunction]}
          value="pt-BR"
        />
        <InjectIntl(LanguagesButton)
          isOpen={true}
          onClick={[Function]}
          remainingLanguages={5}
        />
      </Stack>
    </div>
  </Stack>
</Horizontal>
`;

exports[`rendering with minimal props should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div
      key="en"
    >
      <Stack
        alignItems="stretch"
        scale="xs"
      >
        <LocalizedInput
          hasError={false}
          language="en"
          onChange={[MockFunction]}
          value="Horse"
        />
        <InjectIntl(LanguagesButton)
          onClick={[Function]}
          remainingLanguages={1}
        />
      </Stack>
    </div>
  </Stack>
</Horizontal>
`;
